--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-player": "^2.12.0",
     "react-stars": "^2.2.5",
     "tailwind-scrollbar-hide": "^1.1.7",
     "typescript": "4.9.5",
